# verity-governance-as-code

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.githooks/: full_verify.sh  pre-commit
.github/: CODEOWNERS
.github/hooks/: deny_unsecure.sh  full_verify.sh  prepush
.github/workflows/: ci.yml  deny.toml
docs/: sources_generation.md
examples/basic_rag_pipeline/: .gitignore  README.md  verity_project_conf.yaml
examples/basic_rag_pipeline/config/: connections.yml  policies.yml  quality.yml
examples/basic_rag_pipeline/data/: README.md
examples/basic_rag_pipeline/data/compliance/: sensitive_data.csv
examples/basic_rag_pipeline/data/customer/: tags.csv
examples/basic_rag_pipeline/data/digital/: embeddings.csv
examples/basic_rag_pipeline/data/finance/: transactions.csv
examples/basic_rag_pipeline/data/human_resources/: employees.csv
examples/basic_rag_pipeline/data/offer/: promotions.csv
examples/basic_rag_pipeline/data/sales/: orders.csv
examples/basic_rag_pipeline/data/supply/: inventory.csv
examples/basic_rag_pipeline/data/template/: raw_documents.csv
examples/basic_rag_pipeline/models/: sources.yaml
examples/basic_rag_pipeline/models/marts/: business_intelligence.sql  business_intelligence.yml  rag_knowledge_base.sql  rag_knowledge_base.yml
examples/basic_rag_pipeline/models/marts/rag/: rag_context.sql  rag_context.yml
examples/basic_rag_pipeline/models/staging/compliance/: stg_sensitive_data.sql  stg_sensitive_data.yml
examples/basic_rag_pipeline/scripts/: generate_volume.py
examples/ml_pipeline/: verity_project_conf.yaml
examples/ml_pipeline/config/: connections.yml  policies.yml
examples/ml_pipeline/data/raw/: model_metadata.csv  predictions.csv  user_activity.csv  users.csv
examples/ml_pipeline/models/: sources.yaml
examples/ml_pipeline/models/features/: feat_masked_user_demographics.yml  feat_user_demographics_masked.sql  feat_user_demographics_masked.yml  feat_user_engagement.sql  feat_user_engagement.yml  schema.yml
examples/ml_pipeline/models/marts/: schema.yml  train_churn_dataset.sql  train_churn_dataset.yml  train_churn_dataset_v1.sql  train_churn_dataset_v1.yml
examples/ml_pipeline/models/monitoring/: mon_prediction_drift.sql  mon_prediction_drift.yml  monit_prediction_drift.sql  monit_prediction_drift.yml
examples/ml_pipeline/models/staging/: schema.yml  stg_activity.sql  stg_activity.yml  stg_model_metadata.sql  stg_model_metadata.yml  stg_predictions.sql  stg_predictions.yml  stg_users.sql  stg_users.yml
examples/ml_pipeline/scripts/: generate_data.py
verity/: Cargo.toml
verity-core/: Cargo.toml
verity-core/src/: error.rs  lib.rs
verity-core/src/application/: catalog.rs  clean.rs  engine.rs  lineage.rs  materialization.rs  mod.rs  pipeline.rs  validation.rs
verity-core/src/application/ports/: mod.rs  renderer.rs
verity-core/src/domain/: error.rs  mod.rs
verity-core/src/domain/compiler/: quoter.rs
verity-core/src/domain/compliance/: anomaly.rs  config.rs  mod.rs  zscore.rs
verity-core/src/domain/governance/: configuration.rs  governance_rule.rs  guard.rs  linter.rs  masking.rs  mod.rs  pii.rs  policy.rs  quality.rs  rewriter.rs  scanner.rs  security_level.rs  semantic.rs
verity-core/src/domain/graph/: dag.rs  mod.rs
verity-core/src/domain/ports/: manifest.rs  mod.rs  schema.rs
verity-core/src/domain/project/: configuration.rs  manifest.rs  mod.rs
verity-core/src/infrastructure/: error.rs  fs.rs  mod.rs
verity-core/src/infrastructure/adapters/: datafusion.rs  duckdb.rs  governance_optimizer.rs  mod.rs
verity-core/src/infrastructure/compiler/: discovery.rs  jinja.rs  mod.rs
verity-core/src/infrastructure/config/: connection.rs  governance.rs  mod.rs  project.rs  schema.rs  source.rs
verity-core/src/ports/: connector.rs  mod.rs
verity/src/: cli.rs  main.rs
verity/src/commands/: clean.rs  docs.rs  generate.rs  inspect.rs  lineage.rs  mod.rs  query.rs  run.rs
verity/tests/: ml_pipeline_tests.rs
verity/tests/snapshots/: ml_pipeline_tests__metadata_context_jsonld.snap  ml_pipeline_tests__metadata_context_jsonld.snap.new
(+18 files in other folders)
