# ./Cargo.toml (Workspace Root)

[workspace]
members = [
    "verity-core",
    "verity"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Axel MAUROY"]
edition = "2024"
license = "MIT"
repository = "https://github.com/axel-mauroy/verity-governance-as-code.git"
description = "The Governance-as-Code Data Pipeline Tool"

[workspace.dependencies]

# --- Core Logic ---
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
regex = "1.12.2"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7.2.0", features = ["fancy"] }
walkdir = "2.5.0"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tempfile = "3.24.0"

# --- Data & AI ---
datafusion = "52.1.0"
duckdb = { version = "1.4.3", features = ["bundled"] }
minijinja = { version = "2.0", features = ["loader"] }

# --- CLI ---
clap = { version = "4.5.54", features = ["derive", "env"] }
comfy-table = "7.2.2"
sqlparser = "0.59"

# --- TESTING ---
assert_cmd = "2.1.2"
predicates = "3.1.4"
fs_extra = "1.3.0"
insta = { version = "1.46.3", features = ["yaml"] }

# --- INTERNE ---
verity-core = { path = "./verity-core", version = "0.1.0" }
verity-connectors = { path = "./verity-connectors", version = "0.1.0" }

# --- PROFILS ---
[profile.dev] # (cargo build / cargo run)
opt-level = 0
debug = true
incremental = true 
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2           # Optimizing external libs as much as possible (DataFusion, Arrow)

[profile.release] # (cargo build --release)
opt-level = 3
lto = "thin"
# lto = "fat"
codegen-units = 16
panic = "abort"
strip = "symbols"

[profile.test]
opt-level = 1
