[package]
name = "verity"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
verity-core = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }

tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
datafusion = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
fs_extra = { workspace = true }
insta = { workspace = true }
walkdir = { workspace = true }
